<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Just Java</string>
    <string name="headline">quantity</string>
    <string name="order">order</string>
    <string name="score">0</string>
    <string name="hello">hello</string>
    <string name="jump">new_activity</string>
    <string name="order_summary">Order Summary</string>
    <string name="price_value">Total : $0</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="toppings">topping</string>
    <string name="cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="text_hint">Name</string>
    <string name="toast_upper_limit_text">Sorry, but you can\'t buy more than 100 cups of coffees.</string>
    <string name="toast_lower_limit_text">Sorry, but you can\'t buy negative cups of coffees.</string>

    <!-- All the strings below are used in the Order Information Presentation. -->
    <string name="order_info_name">Name : </string>
    <string name="order_info_cream">Is Whipped Cream Added : </string>
    <string name="order_info_choco">Is Chocolate Added : </string>
    <string name="order_info_quantity">Quantity : </string>
    <string name="order_info_total_price">Total : $</string>
</resources>
