<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16sp"
    android:layout_marginLeft="16sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/decrement"
            android:onClick="decrement"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/score"
            android:textSize="16sp"
            android:textColor="@color/score_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/increament"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/increment"
            android:onClick="increament"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAllCaps="true"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>
    
    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_value"
        android:textSize="16sp"
        android:textColor="@color/score_color"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/order_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"/>

    <Button
        android:id="@+id/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jump"
        android:layout_gravity="center"/>
</LinearLayout>